apps/vzxcvz/base/vzxcvz-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vzxcvz-svc
  namespace: vzxcvz
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vzxcvz.katakam.eti.br
  labels:
    app: vzxcvz
    version: 0.0.1
    backstage.io/kubernetes-id: vzxcvz
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: vzxcvz
